# personal-tools

./: .gitignore  README.md
launchd/: README.md  install-launchd.sh  personal.weekly-reflection.plist
mcp-servers/wiki-search/: README.md  pyproject.toml
mcp-servers/wiki-search/src/wiki_search/: __init__.py  config.py  index.py  server.py
scripts/: check-agents-sync.sh  check-draft-ownership.sh  start-personal-stack.sh  sync-skills-to-codex.sh  weekly-digest.py
weixin-clip/: README.md
weixin-clip/extension/: clip-core.js  content.js  idb-store.js  manifest.json  options.html  options.js  sw.js  writer.html  writer.js
weixin-clip/extension/scripts/: verify-manifest.mjs
