[project]
name = "wiki-search"
version = "0.1.0"
description = "MCP server + indexer for obsidian-wiki/. Exposes search_wiki(query) backed by SQLite FTS5."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
wiki-search-index = "wiki_search.index:main"
wiki-search-server = "wiki_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_search"]
